# MyChat

./: CMakeLists.txt  ChatServer  README.md  server.cpp
config/: mysql.conf
include/: UserManager.h
src/: ConfigReader.cpp  UserManager.cpp
